examples/test/testpolicy2503.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2503
  namespace: namespace52
spec:
  podSelector:
    matchLabels:
      key37: value36
      key22: value16
      key20: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value35
          key32: value9
          key39: value49
      podSelector:
        matchLabels:
          key36: value0
          key12: value26
          key46: value19
